--- a/lockers-1.html
+++ b/lockers-1.html
@@ -36,23 +36,12 @@
       </div>
       <nav id="menu">
         <ul>
-          <li class="logo">
-            <a href="index.html">
-              <img src="img/logo-battery-white.svg" alt="">
-            </a>
-          </li>
-          <li>
-            <a href="index.html#easycharge">¿Quienes somos?</a>
-          </li>
-          <li>
-            <a href="productos.html">productos</a>
-          </li>
-          <li>
-            <a href="servicios.html">servicios</a>
-          </li>
-          <li>
-            <a href="#contacto">Contactanos</a>
-          </li>
+          <li class="logo"><a href="index.html"><img src="img/logo-battery-white.svg" alt=""></a></li>
+          <li><a href="index.html#easycharge">¿Quienes somos?</a></li>
+          <li><a href="productos.html">productos</a></li>
+          <li><a href="servicios.html">servicios</a></li>
+          <li><a href="galeria.html">galería</a></li>
+          <li><a href="#contacto">Contactanos</a></li>
         </ul>
       </nav>
     </div>
@@ -98,7 +87,15 @@
                   <img src="img/products/lockers-1/pin.jpg" alt="" class="img-responsive">
                 </div>
                 <div class="text">
-                  <p>8 Lockers con Código PIN</p>
+                  <p>8 celdas con Código PIN.</p>
+                </div>
+              </div>
+              <div class="photos-products">
+                <div class="photo">
+                  <img src="img/products/lockers-1/multidevices.jpg" alt="" class="img-responsive">
+                </div>
+                <div class="text">
+                  <p>2 cables de carga por celda.</p>
                 </div>
               </div>
               <div class="photos-products">
@@ -106,15 +103,7 @@
                   <img src="img/products/lockers-1/material.jpg" alt="" class="img-responsive">
                 </div>
                 <div class="text">
-                  <p>2 cables de carga por lockers</p>
-                </div>
-              </div>
-              <div class="photos-products">
-                <div class="photo">
-                  <img src="img/products/lockers-1/material.jpg" alt="" class="img-responsive">
-                </div>
-                <div class="text">
-                  <p>Construido con materiales de alta calidad: Proteje tu dispositivo de robos.</p>
+                  <p><b>Construido con materiales de alta calidad:</b> Protege tu dispositivo de robos mientras realizas actividades.</p>
                 </div>
               </div>
               <div class="photos-products">
@@ -158,6 +147,31 @@
                 </li>
               </ul>
             </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-12">
+        <div class="text-center">
+          <h2>Clientes</h2>
+        </div>
+        <div class="flex_container_description establecimientos">
+          <div class="flex_item">
+            <figure class="tech_item" id="eight_gagdet">
+              <img src="img/clients/espanola.jpg" alt="">
+              <figcaption>
+                <h2>Asociación Española</h2>
+                <p>Asociación Española Primera de Socorros Mutuos</p>
+              </figcaption>
+            </figure>
+          </div>
+          <div class="flex_item">
+            <figure class="tech_item" id="eight_gagdet">
+              <img src="img/clients/club_nautico.jpg" alt="">
+              <figcaption>
+                <h2>Club Náutico</h2>
+                <p>Carrasco y Punta Gorda</p>
+              </figcaption>
+            </figure>
           </div>
         </div>
       </div>
