--- a/pared-1.html
+++ b/pared-1.html
@@ -37,6 +37,7 @@
               <li><a href="index.html#easycharge">¿Quienes somos?</a></li>
               <li><a href="productos.html">productos</a></li>
               <li><a href="servicios.html">servicios</a></li>
+              <li><a href="galeria.html">galería</a></li>
               <li><a href="#contacto">Contactanos</a></li>
             </ul>
           </nav>
@@ -89,7 +90,7 @@
                         </div>
                         <div class="photos-products">
                           <div class="photo">
-                            <img src="img/products/pared-1/cables.jpg" alt="" class="img-responsive">
+                            <img src="img/products/pared-1/installation.jpg" alt="" class="img-responsive">
                           </div>
                           <div class="text">
                             <p>Facíl instalación.</p>
