--- a/servicios.html
+++ b/servicios.html
@@ -37,6 +37,7 @@
               <li><a href="index.html#easycharge">¿Quienes somos?</a></li>
               <li><a href="productos.html">productos</a></li>
               <li><a href="servicios.html">servicios</a></li>
+              <li><a href="galeria.html">galería</a></li>
               <li><a href="#contacto">Contactanos</a></li>
             </ul>
           </nav>
@@ -85,10 +86,12 @@
                 </ul>
               </div>
               <div class="tabs-section">
-                <div class="tab active" id="one">
+                <div class="tab alquiler active" id="one">
                   <div class="quote_text">
                     <h2>Alquiler</h2>
-                    El servicio de alquiles consiste en otorgar a tu establecimiento en modalidad de arrendamiento la cantidad de equipos portátiles con pantalla que consideres necesario, exhibiendo en los mismos lo que tu negocio desee: menú, ofertas, publicidades, etc.
+                    El servicio de alquiler consiste en otorgar a tu establecimiento o empresa en modalidad de arrendamiento la cantidad de
+                    equipos portátiles con pantalla que consideres necesario, exhibiendo en los mismos lo que desees: menú, ofertas, publicidades,
+                    etc.
                   </div>
                   <div class="flex_container_description">
                     <div class="flex_item">
@@ -121,8 +124,8 @@
                           <div class="number logo_circulo">
                             3
                           </div>
-                          <p>Las personas cada vez están más preocupadas de no quedarse sin batería, todos quieren conectarse a las redes sociales,
-                            buscar información y compartir fotos.</p>
+                          <p>Las personas cada vez están más preocupadas de quedarse sin batería, todos quieren conectarse a las redes sociales, buscar
+                          información y compartir fotos.</p>
                         </figcaption>
                       </figure>
                     </div>
@@ -138,6 +141,63 @@
                       </figure>
                     </div>
                   
+                  </div>
+                  <div class="mapa_tab">
+                    <div class="slider separator_bottom separator_top ">
+                      <div class="gradiant">
+                        <img src="img/slider/slide_2.jpg" alt="" class="img-responsive img_slider">
+                      </div>
+                      <div class="flex_center">
+                        <div class="flex_item">
+                          <div class="text_center_slider ">
+                            <div class="img">
+                              <img src="img/iphone_charging.png" class="img-responsive tlf" alt="">
+                            </div>
+                            <div class="txt">
+                              <h1>
+                                Encuentra nuestros establecimientos alidos
+                              </h1>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="cont_map">
+                      <div class="map">
+                        <iframe id="map" src="https://www.google.com/maps/d/embed?mid=13XlGv_SixkLzIBchLpTy8BYn4Do_7NPV"></iframe>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="clientes_tab">
+                    <div class="text-center">
+                      <h2>Estos marcas confían en nosotros:</h2>
+                    </div>
+                    <div class="flex_container_description establecimientos">
+                      <div class="flex_item">
+                        <figure class="tech_item" id="eight_gagdet">
+                          <img src="img/clients/portovanilla.jpg" alt="">
+                          <figcaption>
+                            <h2>PortoVanilla</h2>
+                          </figcaption>
+                        </figure>
+                      </div>
+                      <div class="flex_item">
+                        <figure class="tech_item" id="eight_gagdet">
+                          <img src="img/icon/logo/aquinosvemos.jpg" alt="">
+                          <figcaption>
+                            <h2>Aqui nos Vemos</h2>
+                          </figcaption>
+                        </figure>
+                      </div>
+                      <div class="flex_item">
+                        <figure class="tech_item" id="eight_gagdet">
+                          <img src="img/icon/logo/movistar.jpg" alt="">
+                          <figcaption>
+                            <h2>Movistar</h2>
+                          </figcaption>
+                        </figure>
+                      </div>
+                    </div>
                   </div>
                   <div class="flex_content_doble easycharge contact_easycharge gradiant">
                     <div class="right">
@@ -155,11 +215,11 @@
                     </div>
                   </div>
                 </div>
-                <div class="tab" id="two">
+                <div class="tab eventos" id="two">
                   <div class="quote_text">
                     <h2>Eventos</h2>
-                    Consiste en brindar en modalidad de arrendamiento para un evento, fiesta o conferencia la cantidad de equipos portatiles con pantalla que se considere
-                    necesario, exhibiendo en las pantallas el contenido que se desee
+                    Consiste en brindar en modalidad de arrendamiento para un evento, fiesta o conferencia la cantidad de equipos portátiles
+                    con pantalla que se considere necesario, exhibiendo en las pantallas el contenido que se desee.
                   </div>
                   <div class="flex_container_description">
                     <div class="flex_item">
@@ -180,8 +240,8 @@
                           <div class="number logo_circulo">
                             2
                           </div>
-                          <p>Además de ofrecer la practicidad de un cargador portátil de celulares puedes usar Easy Charge para exhibir imágenes
-                            y videos a los asistentes a tu evento, fiesta o conferencia.</p>
+                          <p>Además de ofrecer la practicidad de un cargador portátil de celulares puedes usar EasyShow para exhibir imágenes y videos
+                          a los asistentes a tu evento, fiesta o conferencia.</p>
                         </figcaption>
                       </figure>
                     </div>
@@ -209,7 +269,7 @@
                   
                   </div>
                 </div>
-                <div class="tab" id="three">
+                <div class="tab anunciate" id="three">
                   <div class="quote_text">
                     <h2>Anunciate con nosotros</h2>
                      Nuestros cargadores portátiles con pantallas son dispositivos modernos y prácticos donde publicitar. Tu marca, producto
@@ -225,7 +285,7 @@
                             1
                           </div>
                           <h3>Última tecnología</h3>
-                          <p>EasyShow es una plataforma Simple y Eficaz.</p>
+                          <p>EasyShow es una plataforma simple y eficaz para publicitar tu marca, productos y/o servicios.</p>
                         </figcaption>
                       </figure>
                     </div>
@@ -237,7 +297,8 @@
                             2
                           </div>
                           <h3>Única</h3>
-                          <p>Es colocar su Marca en una experencia memorable y divertida.</p>
+                          <p>Anunciar en Easy Charge es colocar tu marca en una experiencia memorable y llamativa para el público, interactuando permanentemente
+                          con los clientes de los establecimientos de la alianza Easy Charge mientras ellos cargan sus dispositivos.</p>
                         </figcaption>
                       </figure>
                     </div>
@@ -248,10 +309,37 @@
                             3
                           </div>
                           <h3>Anunciate</h3>
-                          <p>Anuncia en EasyCharge es fácil y rápido.</p>
+                          <p>Anuncia tu marca en establecimientos de renombre y de gran afluencia de público. Garantizando que tu contenido llegara al
+                          destinatario final.</p>
                         </figcaption>
                       </figure>
                     </div>                  
+                  </div>
+                  <div class="mapa_tab">
+                    <div class="slider separator_bottom separator_top ">
+                      <div class="gradiant">
+                        <img src="img/slider/slide_2.jpg" alt="" class="img-responsive img_slider">
+                      </div>
+                      <div class="flex_center">
+                        <div class="flex_item">
+                          <div class="text_center_slider ">
+                            <div class="img">
+                              <img src="img/iphone_charging.png" class="img-responsive tlf" alt="">
+                            </div>
+                            <div class="txt">
+                              <h1>
+                                Encuentra nuestros establecimientos alidos para publicitar
+                              </h1>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="cont_map">
+                      <div class="map">
+                        <iframe id="map" src=""></iframe>
+                      </div>
+                    </div>
                   </div>
                   <div class="quote_text">
                     <h2>¿Cómo funciona?</h2>
@@ -280,39 +368,6 @@
               </div>
             </div>
 
-          </div>
-        </div>
-      </section>
-
-      <section id="encuentranos">
-        <div class="slider separator_bottom separator_top ">
-          <div class="gradiant">
-            <img src="img/slider/slide_2.jpg" alt="" class="img-responsive img_slider">
-          </div>
-          <div class="flex_center">
-            <div class="flex_item">
-              <div class="text_center_slider ">
-                <div class="img">
-                  <img src="img/iphone_charging.png" class="img-responsive" alt="">
-                </div>
-                <div class="txt">                  
-                  <h1>
-                    Encuentra nuestros establecimientos alidos para publicitar
-                  </h1>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section>
-        <div class="container">
-          <div class="col-md-12">
-            <div class="cont_map">
-              <div class="map">
-                <iframe src="https://www.google.com/maps/d/embed?mid=1iIXj6dESsq7RjBYCjYjkpkzbYv0&hl=es-419"></iframe>
-              </div>
-            </div>
           </div>
         </div>
       </section>
