--- a/galeria.html
+++ b/galeria.html
@@ -17,7 +17,7 @@
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
         <script src='https://www.google.com/recaptcha/api.js'></script>
     </head>
-    <body class="index_section">
+    <body class="gallery_section">
 
       <header>
         <div class="container">
@@ -44,6 +44,7 @@
         </div>
       </header>
 
+
       <section id="inicio">
         <div class="slider small gradiant">
           <div class="flex_center">
@@ -51,7 +52,7 @@
               <div class="text_center_slider ">
                 <div class="txt">                  
                   <h1>
-                    <span>EasyCube</span>
+                    <span>Galería</span>
                   </h1>
                 </div>
               </div>
@@ -61,129 +62,32 @@
       </section>
 
       <section id="productos">
-        <div class="container">
-            <div class="col-md-12">
-                <div class="detail-product">
-                    <div class="product-img">
-                        <img src="img/products/mesa-2.png" alt="EasyCube con 12 Power Banks" class="img-responsive">
-                    </div>
-                    <div class="product-description">
-                      <h2>EasyCube</h2>
-                      <p>Con 12 Power Bank, Super Power Station</p>
-                      <div class="list-description">
-                        <h3>Perfecto para:</h3>
-                        <ul>
-                          <li>Restaurants</li>
-                          <li>Cafes</li>
-                          <li>Bares</li>
-                        </ul>
+          <div class="container">
+              <div class="col-md-12">
+                  <div class="gallery">
+                      <div class="flex_container_description">
+                          <div class="flex_item">
+                              <figure><img src="img/gallery/new/001.jpg" class="img-responsive" alt=""></figure>
+                          </div>
+                          <div class="flex_item">
+                              <figure><img src="img/gallery/new/002.jpg" class="img-responsive" alt=""></figure>
+                          </div>
+                          <div class="flex_item">
+                              <figure><img src="img/gallery/new/003.jpg" class="img-responsive" alt=""></figure>
+                          </div>
+                          <div class="flex_item">
+                              <figure><img src="img/gallery/new/004.jpg" class="img-responsive" alt=""></figure>
+                          </div>
+                          <div class="flex_item">
+                              <figure><img src="img/gallery/new/005.jpg" class="img-responsive" alt=""></figure>
+                          </div>
+                          <div class="flex_item">
+                              <figure><img src="img/gallery/new/006.jpg" class="img-responsive" alt=""></figure>
+                          </div>
                       </div>
-                      <div class="content-photos-products">
-                        <div class="photos-products">
-                          <div class="photo">
-                            <img src="img/products/mesa-2/chargers.jpg" alt="" class="img-responsive">
-                          </div>
-                          <div class="text">
-                            <p>
-                              <b>12 espacios de carga de Power Bank:</b> Carga hasta 12 Power Banks al mismo tiempo</p>
-                          </div>
-                        </div>
-
-                        <div class="photos-products">
-                          <div class="photo">
-                            <img src="img/products/mesa-2/charger_all.jpg" alt="" class="img-responsive">
-                          </div>
-                          <div class="text">
-                            <p>
-                              <b>Hasta 12 Power Banks por estación:</b> Para que tus clientes se mantengan con carga en la bateria de sus celulares</p>
-                          </div>
-                        </div>
-                        <div class="photos-products">
-                          <div class="photo">
-                            <img src="img/products/mesa-2/charger.jpg" alt="" class="img-responsive">
-                          </div>
-                          <div class="text">
-                            <p>Carga 2 dispositivos simultáneamente</p>
-                          </div>
-                        </div>
-                        <div class="photos-products">
-                          <div class="photo">
-                            <img src="img/products/mesa-2/cables.jpg" alt="" class="img-responsive">
-                          </div>
-                          <div class="text">
-                            <p>Cable trenzado</p>
-                          </div>
-                        </div>
-                        <div class="photos-products">
-                          <div class="photo">
-                            <img src="img/products/mesa-2/design.jpg" alt="" class="img-responsive">
-                          </div>
-                          <div class="text">
-                            <p>Publicidad Customizable</p>
-                          </div>
-                        </div>
-                        <div class="photos-products">
-                          <div class="photo">
-                            <img src="img/products/features/meeting.jpg" alt="" class="img-responsive">
-                          </div>
-                          <div class="text">
-                            <p>Mantenga a sus clientes con carga mientras se divierten</p>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="list-description">
-                        <h3>Especificaciones</h3>
-                        <ul>
-                          <li>
-                            <p>
-                              <b>Dimensiones del Power Bank:</b>
-                              85 x 170 x 24mm
-                            </p>
-                          </li>
-                          <li>
-                            <p>
-                              <b>Dimensiones de la estación:</b>
-                              240 x 317 x 180mm
-                            </p>
-                          </li>
-                          <li>
-                            <p>
-                              <b>Salida de energia:</b>
-                              5V/ 1.0A x2
-                            </p>
-                          </li>
-                          <li>
-                            <p>
-                              <b>Cantidad de Power Banks:</b>
-                              12 PCS
-                            </p>
-                          </li>
-                          <li>
-                            <p>
-                              <b>Capacidad de Batería:</b>
-                              5000mAh
-                            </p>
-                          </li>
-                        </ul>
-                      </div>
-                      <div class="list-connection">
-                        <h3>Cables de Carga</h3>
-                        <ul>
-                          <li>
-                            <img src="img/icon/usb-1.jpg" alt=""> Micro USB Cable
-                          </li>
-                          <li>
-                            <img src="img/icon/apple-l.jpg" alt=""> Apple MFi Lightning Cable
-                          </li>
-                          <li>
-                            <img src="img/icon/usb-c.jpg" alt=""> USB Type C Cable
-                          </li>
-                        </ul>
-                      </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+                  </div>
+              </div>
+          </div>
       </section>
 
       <footer id="contacto" class="separator_top">
@@ -287,7 +191,6 @@
         ga('send', 'pageview');
 
       </script>
-      <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBP7LF7pdN-KAHAcw2yeeKYSnaNkhUileU&callback=initMap"></script> -->
       <script src="js/vendor/jquery-1.11.2.min.js"></script>
       <script src="js/main.js?v=1.1"></script>
     </body>
