--- a/index.html
+++ b/index.html
@@ -37,13 +37,14 @@
               <li><a href="#easycharge">¿Quienes somos?</a></li>
               <li><a href="productos.html">productos</a></li>
               <li><a href="servicios.html">servicios</a></li>
+              <li><a href="galeria.html">galería</a></li>
               <li><a href="#contacto">Contactanos</a></li>
             </ul>
           </nav>
         </div>
       </header>
 
-      <section id="inicio">
+      <section id="inicio" class="slider_principal">
         <div class="slider separator_bottom gradiant">
           <div class="flex_center">
             <div class="flex_item">
@@ -63,7 +64,6 @@
               </div>
             </div>
           </div>
-          <img src="img/slider/slide_1.jpg" alt="" class="img-responsive img_slider">
           <a href="#" class="arrow_down">
             <svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" width="465.7" height="88.2" viewBox="187.6 170.3 465.7 88.2" enable-background="new 187.638 170.269 465.706 88.202" xml:space="preserve"><polyline fill="none" stroke="#02B4B6" stroke-width="8.5" stroke-miterlimit="10" points="652 174.3 420.5 254 189 174.3 "/></svg>
           </a>
@@ -80,21 +80,21 @@
             </div>
             <div class="left">
               <h2>¿Quienes somos?</h2>
-              <p>En Easy Charge importamos y distribuimos de forma exclusiva, productos de alta calidad que brindan soluciones de carga de batería de dispositivos móviles para establecimientos comerciales y sus clientes.
-              <br>
-              Nuestros productos están fabricados de tal forma que combinan el buen diseño con la practicidad, los problemas cotidianos de carga de batería de Dispositivos Móviles de forma eficiente y elegante.
-              <br>
-              Las soluciones de carga de Easy Charge potencia la tecnología que nos conectan con las personas, actividades y las experiencias que tanto amamos.
-              </p>
+              <p>En Easy Charge importamos y distribuimos de forma exclusiva, productos de alta calidad que brindan soluciones de carga de
+              batería de dispositivos móviles para establecimientos comerciales y sus clientes.</p>
+              <p>Nuestros productos están fabricados de tal forma que combinan el buen diseño con la practicidad, los problemas cotidianos
+              de carga de batería de dispositivos móviles son resueltos de forma eficiente y elegante.</p>
+              <p>Las soluciones de carga de Easy Charge potencia la tecnología que nos conectan con las personas, actividades y las experiencias
+              que tanto amamos.</p>
             </div>
           </div>
           <div class="flex_content_doble publicidad">
             <div class="right">
               <h2>¿Por que Easy Charge?</h2>
-              <p>Los beneficios que obtendrán nuestros clientes y asociados con los equipos de Easy Charge será los de proveer a sus clientes de un servicio diferencial de carga de batería, satisfaciendo una necesidad que se ha convertido en básica en los últimos años.
-                <br>
-              Nuestros productos pueden ser utilizados en restaurantes, gimnasios, centros de salud, spas, shoppings, hoteles y demás establecimientos.
-              </p>
+              <p>Los beneficios que obtendrán nuestros clientes y asociados con los equipos Easy Charge será los de proveer a sus clientes
+              de un servicio diferencial de carga de batería, satisfaciendo una necesidad que se ha convertido en básica en los últimos
+              años.</p>
+              <p>Nuestros productos pueden ser utilizados en restaurantes, gimnasios, centros de salud, spas, shoppings, hoteles y demás establecimientos.</p>
             </div>
             <div class="left">
               <img src="img/icon/publicity.svg" alt="">
