--- a/mesa-1.html
+++ b/mesa-1.html
@@ -37,6 +37,7 @@
               <li><a href="index.html#easycharge">¿Quienes somos?</a></li>
               <li><a href="productos.html">productos</a></li>
               <li><a href="servicios.html">servicios</a></li>
+              <li><a href="galeria.html">galería</a></li>
               <li><a href="#contacto">Contactanos</a></li>
             </ul>
           </nav>
@@ -83,7 +84,7 @@
                         <div class="content-photos-products">
                           <div class="photos-products">
                             <div class="photo">
-                              <img src="img/products/features/dinner.jpg" alt="" class="img-responsive">
+                              <img src="img/products/mesa-1/charges.jpg" alt="" class="img-responsive">
                             </div>
                             <div class="text">
                               <p>
@@ -92,7 +93,7 @@
                           </div>
                           <div class="photos-products">
                             <div class="photo">
-                              <img src="img/products/features/dinner.jpg" alt="" class="img-responsive">
+                              <img src="img/products/mesa-1/charge.jpg" alt="" class="img-responsive">
                             </div>
                             <div class="text">
                               <p>
