--- a/mesa-3.html
+++ b/mesa-3.html
@@ -36,23 +36,12 @@
       </div>
       <nav id="menu">
         <ul>
-          <li class="logo">
-            <a href="index.html">
-              <img src="img/logo-battery-white.svg" alt="">
-            </a>
-          </li>
-          <li>
-            <a href="index.html#easycharge">¿Quienes somos?</a>
-          </li>
-          <li>
-            <a href="productos.html">productos</a>
-          </li>
-          <li>
-            <a href="servicios.html">servicios</a>
-          </li>
-          <li>
-            <a href="#contacto">Contactanos</a>
-          </li>
+          <li class="logo"><a href="index.html"><img src="img/logo-battery-white.svg" alt=""></a></li>
+          <li><a href="index.html#easycharge">¿Quienes somos?</a></li>
+          <li><a href="productos.html">productos</a></li>
+          <li><a href="servicios.html">servicios</a></li>
+          <li><a href="galeria.html">galería</a></li>
+          <li><a href="#contacto">Contactanos</a></li>
         </ul>
       </nav>
     </div>
