--- a/productos.html
+++ b/productos.html
@@ -37,6 +37,7 @@
               <li><a href="index.html#easycharge">¿Quienes somos?</a></li>
               <li><a href="productos.html">productos</a></li>
               <li><a href="servicios.html">servicios</a></li>
+              <li><a href="galeria.html">galería</a></li>
               <li><a href="#contacto">Contactanos</a></li>
             </ul>
           </nav>
