--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
         <script src='https://www.google.com/recaptcha/api.js'></script>
     </head>
-    <body class="index_section">
+    <body class="index_section principal">
 
       <header>
         <div class="container">
