--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               </div>
             </div>
           </div>
-          <a href="#" class="arrow_down">
+          <a href="#easycharge" class="arrow_down">
             <svg xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" width="465.7" height="88.2" viewBox="187.6 170.3 465.7 88.2" enable-background="new 187.638 170.269 465.706 88.202" xml:space="preserve"><polyline fill="none" stroke="#02B4B6" stroke-width="8.5" stroke-miterlimit="10" points="652 174.3 420.5 254 189 174.3 "/></svg>
           </a>
         </div>
