--- a/productos.html
+++ b/productos.html
@@ -110,6 +110,35 @@
                   </div>
                 </div>
             </div>
+            <div class="col-md-12">
+              <h2 class="text-center">Nuestros clientes</h2>
+              <div class="flex_container_description establecimientos">
+                <div class="flex_item">
+                  <figure class="tech_item" id="eight_gagdet">
+                    <img src="img/clients/espanola.jpg" alt="">
+                    <figcaption>
+                      <h2>Asociación Española</h2>
+                    </figcaption>
+                  </figure>
+                </div>
+                <div class="flex_item">
+                  <figure class="tech_item" id="eight_gagdet">
+                    <img src="img/clients/club_nautico.jpg" alt="">
+                    <figcaption>
+                      <h2>Club Náutico</h2>
+                    </figcaption>
+                  </figure>
+                </div>
+                <div class="flex_item">
+                  <figure class="tech_item" id="eight_gagdet">
+                    <img src="img/icon/logo/logo_wernerbernheim.jpg" alt="">
+                    <figcaption>
+                      <h2>Werner Bernheim</h2>
+                    </figcaption>
+                  </figure>
+                </div>
+              </div>
+            </div>
         </div>
       </section>
       <footer id="contacto" class="separator_top">
