--- a/servicios.html
+++ b/servicios.html
@@ -145,7 +145,7 @@
                   <div class="mapa_tab">
                     <div class="slider separator_bottom separator_top ">
                       <div class="gradiant">
-                        <img src="img/slider/slide_2.jpg" alt="" class="img-responsive img_slider">
+                        <img src="img/slider/map.jpg" alt="" class="img-responsive img_slider">
                       </div>
                       <div class="flex_center">
                         <div class="flex_item">
@@ -318,7 +318,7 @@
                   <div class="mapa_tab">
                     <div class="slider separator_bottom separator_top ">
                       <div class="gradiant">
-                        <img src="img/slider/slide_2.jpg" alt="" class="img-responsive img_slider">
+                        <img src="img/slider/map.jpg" alt="" class="img-responsive img_slider">
                       </div>
                       <div class="flex_center">
                         <div class="flex_item">
