--- a/galeria.html
+++ b/galeria.html
@@ -12,6 +12,7 @@
         <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
         <link rel="icon" href="/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/featherlight.min.css">
         <link rel="stylesheet" href="css/main.css?v=1.6">
         <link rel="stylesheet" href="css/responsive.css?v=1.6">
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
@@ -43,46 +44,119 @@
           </nav>
         </div>
       </header>
-
-
-      <section id="inicio">
-        <div class="slider small gradiant">
-          <div class="flex_center">
-            <div class="flex_item">
-              <div class="text_center_slider ">
-                <div class="txt">                  
-                  <h1>
-                    <span>Galería</span>
-                  </h1>
-                </div>
+    <section id="inicio">
+      <div class="slider small gradiant">
+        <div class="flex_center">
+          <div class="flex_item">
+            <div class="text_center_slider ">
+              <div class="txt">
+                <h1>
+                  <span>Galeria</span>
+                </h1>
               </div>
             </div>
           </div>
         </div>
-      </section>
-
+      </div>
+    </section>
       <section id="productos">
           <div class="container">
               <div class="col-md-12">
                   <div class="gallery">
+                    <h3>EasyNadia</h3>
+                    <div class="flex_container_description">
+                      <div class="flex_item">
+                        <figure>
+                          <img src="img/gallery/EasyNadia/001_thumb.jpg" data-featherlight="img/gallery/EasyNadia/001.jpg" class="img-responsive" alt="">
+                        </figure>
+                      </div>
+                      <div class="flex_item">
+                        <figure>
+                          <img src="img/gallery/EasyNadia/002_thumb.jpg" data-featherlight="img/gallery/EasyNadia/002.jpg" class="img-responsive" alt="">
+                        </figure>
+                      </div>
+                      <div class="flex_item">
+                        <figure>
+                          <img src="img/gallery/EasyNadia/003_thumb.jpg" data-featherlight="img/gallery/EasyNadia/003.jpg" class="img-responsive" alt="">
+                        </figure>
+                      </div>
+                      <div class="flex_item">
+                        <figure>
+                          <img src="img/gallery/EasyNadia/004_thumb.jpg" data-featherlight="img/gallery/EasyNadia/004.jpg" class="img-responsive" alt="">
+                        </figure>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="gallery">
+                    <h3>EasyOread</h3>
+                    <div class="flex_container_description">
+                      <div class="flex_item">
+                        <figure>
+                          <img src="img/gallery/EasyOread/001_thumb.jpg" data-featherlight="img/gallery/EasyOread/001.jpg" class="img-responsive" alt="">
+                        </figure>
+                      </div>
+                      <div class="flex_item">
+                        <figure>
+                          <img src="img/gallery/EasyOread/002_thumb.jpg" data-featherlight="img/gallery/EasyOread/002.jpg" class="img-responsive" alt="">
+                        </figure>
+                      </div>
+                      <div class="flex_item">
+                        <figure>
+                          <img src="img/gallery/EasyOread/003_thumb.jpg" data-featherlight="img/gallery/EasyOread/003.jpg" class="img-responsive" alt="">
+                        </figure>
+                      </div>
+                      <div class="flex_item">
+                        <figure>
+                          <img src="img/gallery/EasyOread/004_thumb.jpg" data-featherlight="img/gallery/EasyOread/004.jpg" class="img-responsive" alt="">
+                        </figure>
+                      </div>
+                      <div class="flex_item">
+                        <figure>
+                          <img src="img/gallery/EasyOread/005_thumb.jpg" data-featherlight="img/gallery/EasyOread/005.jpg" class="img-responsive" alt="">
+                        </figure>
+                      </div>
+                      <div class="flex_item">
+                        <figure>
+                          <img src="img/gallery/EasyOread/006_thumb.jpg" data-featherlight="img/gallery/EasyOread/006.jpg" class="img-responsive" alt="">
+                        </figure>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="gallery">
+                    <h3>EasyMount</h3>
+                    <div class="flex_container_description">
+                      <div class="flex_item">
+                        <figure>
+                          <img src="img/gallery/EasyMount/001_thumb.jpg" data-featherlight="img/gallery/EasyMount/001.jpg" class="img-responsive" alt="">
+                        </figure>
+                      </div>
+                      <div class="flex_item">
+                        <figure>
+                          <img src="img/gallery/EasyMount/002_thumb.jpg" data-featherlight="img/gallery/EasyMount/002.jpg" class="img-responsive" alt="">
+                        </figure>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="gallery">
+                      <h3>EasyShow</h3>
                       <div class="flex_container_description">
                           <div class="flex_item">
-                              <figure><img src="img/gallery/new/001.jpg" class="img-responsive" alt=""></figure>
+                              <figure><img src="img/gallery/EasyShow/001_thumb.jpg" data-featherlight="img/gallery/EasyShow/001.jpg" class="img-responsive" alt=""></figure>
                           </div>
                           <div class="flex_item">
-                              <figure><img src="img/gallery/new/002.jpg" class="img-responsive" alt=""></figure>
+                              <figure><img src="img/gallery/EasyShow/002_thumb.jpg" data-featherlight="img/gallery/EasyShow/002.jpg" class="img-responsive" alt=""></figure>
                           </div>
                           <div class="flex_item">
-                              <figure><img src="img/gallery/new/003.jpg" class="img-responsive" alt=""></figure>
+                              <figure><img src="img/gallery/EasyShow/003_thumb.jpg" data-featherlight="img/gallery/EasyShow/003.jpg" class="img-responsive" alt=""></figure>
                           </div>
                           <div class="flex_item">
-                              <figure><img src="img/gallery/new/004.jpg" class="img-responsive" alt=""></figure>
+                              <figure><img src="img/gallery/EasyShow/004_thumb.jpg" data-featherlight="img/gallery/EasyShow/004.jpg" class="img-responsive" alt=""></figure>
                           </div>
                           <div class="flex_item">
-                              <figure><img src="img/gallery/new/005.jpg" class="img-responsive" alt=""></figure>
+                              <figure><img src="img/gallery/EasyShow/005_thumb.jpg" data-featherlight="img/gallery/EasyShow/005.jpg" class="img-responsive" alt=""></figure>
                           </div>
                           <div class="flex_item">
-                              <figure><img src="img/gallery/new/006.jpg" class="img-responsive" alt=""></figure>
+                              <figure><img src="img/gallery/EasyShow/006_thumb.jpg" data-featherlight="img/gallery/EasyShow/006.jpg" class="img-responsive" alt=""></figure>
                           </div>
                       </div>
                   </div>
@@ -192,6 +266,7 @@
 
       </script>
       <script src="js/vendor/jquery-1.11.2.min.js"></script>
+      <script src="js/vendor/featherlight.min.js"></script>
       <script src="js/main.js?v=1.2"></script>
     </body>
 </html>
