--- a/galeria.html
+++ b/galeria.html
@@ -85,6 +85,36 @@
                           <img src="img/gallery/EasyNadia/004_thumb.jpg" data-featherlight="img/gallery/EasyNadia/004.jpg" class="img-responsive" alt="">
                         </figure>
                       </div>
+                      <div class="flex_item">
+                        <figure>
+                          <img src="img/gallery/EasyNadia/005_thumb.jpg" data-featherlight="img/gallery/EasyNadia/005.jpg" class="img-responsive" alt="">
+                        </figure>
+                      </div>
+                      <div class="flex_item">
+                        <figure>
+                          <img src="img/gallery/EasyNadia/006_thumb.jpg" data-featherlight="img/gallery/EasyNadia/006.jpg" class="img-responsive" alt="">
+                        </figure>
+                      </div>
+                      <div class="flex_item">
+                        <figure>
+                          <img src="img/gallery/EasyNadia/007_thumb.jpg" data-featherlight="img/gallery/EasyNadia/007.jpg" class="img-responsive" alt="">
+                        </figure>
+                      </div>
+                      <div class="flex_item">
+                        <figure>
+                          <img src="img/gallery/EasyNadia/008_thumb.jpg" data-featherlight="img/gallery/EasyNadia/008.jpg" class="img-responsive" alt="">
+                        </figure>
+                      </div>
+                      <div class="flex_item">
+                        <figure>
+                          <img src="img/gallery/EasyNadia/009_thumb.jpg" data-featherlight="img/gallery/EasyNadia/009.jpg" class="img-responsive" alt="">
+                        </figure>
+                      </div>
+                      <div class="flex_item">
+                        <figure>
+                          <img src="img/gallery/EasyNadia/010_thumb.jpg" data-featherlight="img/gallery/EasyNadia/010.jpg" class="img-responsive" alt="">
+                        </figure>
+                      </div>
                     </div>
                   </div>
                   <div class="gallery">
@@ -133,6 +163,16 @@
                       <div class="flex_item">
                         <figure>
                           <img src="img/gallery/EasyMount/002_thumb.jpg" data-featherlight="img/gallery/EasyMount/002.jpg" class="img-responsive" alt="">
+                        </figure>
+                      </div>
+                      <div class="flex_item">
+                        <figure>
+                          <img src="img/gallery/EasyMount/003_thumb.jpg" data-featherlight="img/gallery/EasyMount/003.jpg" class="img-responsive" alt="">
+                        </figure>
+                      </div>
+                      <div class="flex_item">
+                        <figure>
+                          <img src="img/gallery/EasyMount/004_thumb.jpg" data-featherlight="img/gallery/EasyMount/004.jpg" class="img-responsive" alt="">
                         </figure>
                       </div>
                     </div>
