cambio de cliente

--- a/servicios.html
+++ b/servicios.html
@@ -183,9 +183,9 @@
                       </div>
                       <div class="flex_item">
                         <figure class="tech_item" id="eight_gagdet">
-                          <img src="img/icon/logo/aquinosvemos.jpg" alt="">
+                          <img src="img/icon/logo/peluqueria-berrutti.jpg" alt="">
                           <figcaption>
-                            <h2>Aqui nos Vemos</h2>
+                            <h2>Ignacio Berrutti Peluquería</h2>
                           </figcaption>
                         </figure>
                       </div>
