Fix nombre tank

--- a/galeria.html
+++ b/galeria.html
@@ -63,7 +63,7 @@
           <div class="container">
               <div class="col-md-12">
                   <div class="gallery">
-                    <h3>EasyTankPro</h3>
+                    <h3>EasyTank</h3>
                     <div class="flex_container_description">
                       <div class="flex_item">
                         <figure>
