Actualizacion de clientes

--- a/productos.html
+++ b/productos.html
@@ -114,7 +114,7 @@
               <h2 class="text-center">Nuestros clientes</h2>
               <div class="flex_container_description establecimientos">
                 <div class="flex_item">
-                  <figure class="tech_item" id="eight_gagdet">
+                  <figure class="tech_item">
                     <img src="img/clients/espanola.jpg" alt="">
                     <figcaption>
                       <h2>Asociación Española</h2>
@@ -122,7 +122,7 @@
                   </figure>
                 </div>
                 <div class="flex_item">
-                  <figure class="tech_item" id="eight_gagdet">
+                  <figure class="tech_item">
                     <img src="img/clients/club_nautico.jpg" alt="">
                     <figcaption>
                       <h2>Club Náutico</h2>
@@ -130,10 +130,50 @@
                   </figure>
                 </div>
                 <div class="flex_item">
-                  <figure class="tech_item" id="eight_gagdet">
+                  <figure class="tech_item">
                     <img src="img/icon/logo/logo_wernerbernheim.jpg" alt="">
                     <figcaption>
                       <h2>Werner Bernheim</h2>
+                    </figcaption>
+                  </figure>
+                </div>
+                <div class="flex_item">
+                  <figure class="tech_item">
+                    <img src="img/icon/logo/clubgolf.jpg" alt="">
+                    <figcaption>
+                      <h2>Club de Golf del Uruguay</h2>
+                    </figcaption>
+                  </figure>
+                </div>
+                <div class="flex_item">
+                  <figure class="tech_item">
+                    <img src="img/icon/logo/el_palenque.jpg" alt="">
+                    <figcaption>
+                      <h2>El Palenque</h2>
+                    </figcaption>
+                  </figure>
+                </div>
+                <div class="flex_item">
+                  <figure class="tech_item">
+                    <img src="img/icon/logo/tropical_smoothis.jpg" alt="">
+                    <figcaption>
+                      <h2>Tropical Smoothies</h2>
+                    </figcaption>
+                  </figure>
+                </div>
+                <div class="flex_item">
+                  <figure class="tech_item">
+                    <img src="img/icon/logo/el_gaucho.jpg" alt="">
+                    <figcaption>
+                      <h2>Bar el Gaucho</h2>
+                    </figcaption>
+                  </figure>
+                </div>
+                <div class="flex_item">
+                  <figure class="tech_item">
+                    <img src="img/icon/logo/cactus_pescados.jpg" alt="">
+                    <figcaption>
+                      <h2>Cactus y Pescados</h2>
                     </figcaption>
                   </figure>
                 </div>
