--- a/servicios.html
+++ b/servicios.html
@@ -170,7 +170,7 @@
                   </div>
                   <div class="clientes_tab">
                     <div class="text-center">
-                      <h2>Estos marcas confían en nosotros:</h2>
+                      <h2>Estas marcas confían en nuestros servicios:</h2>
                     </div>
                     <div class="flex_container_description establecimientos">
                       <div class="flex_item">
@@ -194,6 +194,14 @@
                           <img src="img/icon/logo/movistar.jpg" alt="">
                           <figcaption>
                             <h2>Movistar</h2>
+                          </figcaption>
+                        </figure>
+                      </div>
+                      <div class="flex_item">
+                        <figure class="tech_item" id="eight_gagdet">
+                          <img src="img/icon/logo/laexcusa.jpg" alt="">
+                          <figcaption>
+                            <h2>La Excusa</h2>
                           </figcaption>
                         </figure>
                       </div>
